Cloudformation/CreateEC2WebServer_WithEIP_SG_UserData/CreateEC2Webserver_WithEIP_SG_UserData_FINAL/create_ec2_webserver_with_EIP_and_userdata.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Part 2 - Create an EC2 Instance with http/https/ssh enabled

Resources:
  WebServerInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0aa7d40eeae50c9a9 # ImageID is for Amazon Linux 2 in us-east-1 region
      InstanceType: t2.micro
      KeyName: MattCloudFormation
      SecurityGroupIds:
        - !Ref WebAppSecurityGroup
      Tags:
        - Key: Name
          Value: WebServerName
      UserData: !Base64
        'Fn::Sub': |
          #!/bin/bash
          yum update -y
          yum install httpd -y
          service httpd start
          chkconfig httpd on
          echo "<html><head>Hello World</head></html>" > /var/www/html/index.html



  WebAppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join ["-", [webapp-security-group, dev]]
      GroupDescription: "Allow HTTP/HTTPS and SSH inbound and outbound traffic" 
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22 
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: WebServerSG

  WebServerEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref WebServerInstance
      Tags:
        - Key: Name
          Value: !Join ["-", [webserver-eip, dev]]
